# transity

./: .clang-format  .cursorignore  .gitignore  .gitmessage  .gitmodules  .roomodes  AGENTS.md  BRANCH_PROTECTION.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DESIGN_ECS.md  DESIGN_WORLD_GEN.md  LICENSE  OVERVIEW.md  PLAN_WORLD_GEN.md  README.md  TECHNICAL_PLAN.md  Transity.sln  Transity.vcxproj  Transity.vcxproj.filters  config.toml  imgui.ini  performance_baselines.csv  refactoring_analysis.md  refactoring_plan_line_creation.md  test_events.json  vcpkg.json
src/: .cursorignore  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Components.h  Constants.h  Debug.cpp  Debug.h  EntityFactory.cpp  EntityFactory.h  FastNoiseLite.h  Game.cpp  Game.h  HeightMap.cpp  HeightMap.h  InputHandler.cpp  InputHandler.h  InteractionMode.h  LineCreationSystem.cpp  LineCreationSystem.h  Logger.cpp  Logger.h  NoiseGenerator.cpp  NoiseGenerator.h  Renderer.cpp  Renderer.h  Simulation.cpp  Simulation.h  TerrainType.h  ThreadPool.h  Transity.cpp  UI.cpp  UI.h  UIManager.cpp  (+6 more)
src/app/: Application.cpp  Application.h  Game.cpp  Game.h  GameState.h  InteractionMode.h  LoadingState.h  SystemTheme.cpp  SystemTheme.h
src/components/: Component.h  GameLogicComponents.h  LineComponents.h  PassengerComponents.h  RenderComponents.h  TrainComponents.h  WorldComponents.h
src/config/: ConfigSystem.cpp
src/core/: Camera.cpp  Camera.h  Components.h  Constants.h  Curve.h  EntityFactory.cpp  EntityFactory.h  ErrorHandler.cpp  ErrorHandler.h  EventManager.h  Game.cpp  Game.h  GameLogicComponents.h  GameState.h  ISystem.h  InputCommand.h  InputManager.cpp  InputManager.h  Line.cpp  Line.h  Pathfinder.cpp  Pathfinder.h  PerfTImer.h  PerformanceMonitor.cpp  PerformanceMonitor.h  RenderComponents.h  ServiceLocator.h  State.h  StateManager.cpp  StateManager.h  Station.cpp  Station.h  StrongTypes.h  SystemManager.cpp  SystemManager.h  Task.h  ThreadManager.h  ThreadPool.cpp  ThreadPool.h  Train.cpp  (+11 more)
src/ecs/: ECSCore.cpp  EntityFactory.cpp  EntityFactory.h  SystemManager.cpp  SystemManager.h  component_manager.cpp  entity_manager.cpp
src/entities/: Entity.h  EntityFactory.cpp  EntityFactory.h  EntityManager.cpp  EntityManager.h  WaterDrawable.cpp  WaterDrawable.h
src/entity/: Passenger.cpp  Passenger.h  Train.cpp  Train.h
src/event/: DeletionEvents.h  EventBus.h  InputEvents.h  LineEvents.h  UIEvents.h
src/events/: Event.h  EventDispatcher.cpp  EventDispatcher.h  InputEvents.h  LineEvents.h
src/features/: LineRenderSystem.cpp  LineRenderSystem.h
src/graphics/: Camera.cpp  Camera.h  ColorManager.cpp  ColorManager.h  LineRenderSystem.cpp  LineRenderSystem.h  LineRenderer.cpp  LineRenderer.h  PlaceAreaRenderer.cpp  PlaceAreaRenderer.h  Renderer.cpp  Renderer.h  StationRenderer.cpp  StationRenderer.h  UI.cpp  UI.h
src/input/: InputHandler.cpp  InputHandler.h  InteractionMode.h
src/interfaces/: IInitializable.h
src/logging/: ConsoleLogger.cpp  FileLogger.cpp  LogUtils.cpp  LoggingSystem.cpp  logging_system.cpp
src/managers/: ActionRegistrar.h  EventManager.h  InitializationManager.h  InputManager.cpp  InputManager.h  LineManager.cpp  LineManager.h  ResourceManager.cpp  ResourceManager.h  SaveManager.cpp  StationManager.cpp  StationManager.h  UIManager.cpp  UIManager.h  WindowManager.cpp  WindowManager.h  WorldMapController.cpp  WorldMapController.h
src/map/: MapLoader.cpp  MapLoader.h  OSMDataStore.cpp  OSMDataStore.h  OSMNode.h  OSMRelation.h  OSMWay.h  PBFParser.cpp  PBFParser.h  ProgressTracker.cpp  ProgressTracker.h  SpatialIndex.cpp  SpatialIndex.h
src/modding/: Plugin.h  PluginLoader.cpp  PluginLoader.h  PluginManager.cpp  PluginManager.h  Sandbox.cpp
src/registry/: ActionRegistrar.h
src/render/: Camera.cpp  ColorManager.cpp  ColorManager.h  LineDrawer.cpp  LineDrawer.h  LineRenderSystem.cpp  PathRenderSystem.cpp  Renderer.cpp  Renderer.h  TrainRenderSystem.cpp  TrainRenderSystem.h
src/resource/: ResourceManager.cpp  ResourceManager.h  SaveManager.cpp  SaveManager.h
src/settings/: GameSettings.cpp  GameSettings.h  SettingsDefinitions.h  SettingsRegistry.cpp  SettingsRegistry.h
src/states/: GameplayState.cpp
src/systems/: CameraSystem.cpp  CameraSystem.h  GameStateSystem.cpp  GameStateSystem.h  InputManager.cpp  InputManager.h  LineCreationSystem.cpp  LineCreationSystem.h  MainMenuState.cpp  MainMenuState.h  MovementSystem.cpp  MovementSystem.h  Renderer.cpp  Renderer.h  ResourceManager.h  ResourceManager.hpp  StationPlacementSystem.cpp  StationPlacementSystem.h  TerrainGenerationSystem.h  TerrainMeshSystem.cpp  TerrainMeshSystem.h  WorldSetupSystem.cpp  WorldSetupSystem.h
src/ui/: DebugUI.cpp  DebugUI.h  InfoPanelUI.cpp  InfoPanelUI.h  InteractionUI.cpp  InteractionUI.h  UI.cpp  UI.h  UIManager.cpp  UIManager.h  WindowManager.h  WorldGenSettingsUI.cpp  WorldGenSettingsUI.h
src/utility/: Async.h  Profiler.cpp  Profiler.h  Quadtree.h  Sandbox.h  Task.h  ThreadManager.cpp  ThreadPool.cpp  ThreadPool.h
src/utils/: Logger.cpp  Logger.h
src/world/: ChunkManagerSystem.cpp  ChunkManagerSystem.h  City.cpp  City.h  CityManager.cpp  CityManager.h  EntityFactory.cpp  EntityFactory.h  Line.cpp  Line.h  LineBuilder.cpp  LineBuilder.h  Map.cpp  Map.h  MapData.cpp  MapData.h  MapLoader.cpp  MapLoader.h  Node.h  Segment.h  SelectionManager.cpp  SelectionManager.h  TerrainRenderSystem.cpp  TerrainRenderSystem.h  TerrainType.h  WorldData.h  WorldGenerationSystem.cpp  WorldGenerationSystem.h  WorldGrid.h  WorldMap.cpp  WorldMap.h
tests/: CMakeLists.txt  basic_test.cpp
tests/config/: config_system_test.cpp
tests/ecs/: ecs_core_test.cpp
tests/integration/: CMakeLists.txt  core_systems_integration_test.cpp  main.cpp  simulation_test.cpp
tests/logging/: ConsoleLogger_test.cpp  FileLogger_test.cpp  LoggingSystem_test.cpp  logging_system_initialize.cpp  logging_system_log.cpp  logging_system_shutdown.cpp  logging_system_test.cpp
tests/unit/: CMakeLists.txt  component_manager_test.cpp  debug_manager_test.cpp  (+1 more)
(+189 files in other folders)
