# Integration tests configuration

# For now, this is a placeholder for future integration tests
# When integration tests are added, they will be configured here

# Example structure for future reference:
# add_executable(integration_tests
#     test_integration_main.cpp
# )
# 
# target_link_libraries(integration_tests PRIVATE
#     gtest
#     gtest_main
#     # Project libraries
# )
# 
# target_include_directories(integration_tests PRIVATE
#     ${CMAKE_SOURCE_DIR}/src
# )
# 
# include(GoogleTest)
# gtest_discover_tests(integration_tests) 